implemented views for EmployeePayRoll

--- a/EmployeePayRollMVC/appsettings.json
+++ b/EmployeePayRollMVC/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "EmpPayRollMVC": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=EmpPayRoll;Integrated Security=True;"
+    "EmpPayRollMVC": "Data Source=IMRANPC;Initial Catalog=EmpPayRoll;Integrated Security=True; "
   },
   "AllowedHosts": "*"
 }
